--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>MeshLink — Decentralized Multi-Mirror Shortener</title>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
+
 <style>
   :root{
     --bg: #f6f9fc;
@@ -14,20 +15,52 @@
     --accent-2: #7c3aed;
     --radius: 14px;
     --shadow: 0 10px 30px rgba(18,38,63,0.08);
+
+    --text: #0f172a;
+    --panel-bg: rgba(255,255,255,0.96);
   }
 
-  *{box-sizing:border-box}
+  /* DARK MODE */
+  [data-theme="dark"]{
+    --bg: #0e0f12;
+    --card: #16181d;
+    --text: #ffffff;
+    --muted: #a0a2a8;
+    --panel-bg: rgba(22,24,29,0.96);
+  }
+
+  *{
+    box-sizing:border-box;
+    transition:background .2s,color .2s,border .2s;
+  }
+
   html,body{height:100%}
 
   body{
     margin:0;
     font-family:Inter, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;
-    background: linear-gradient(180deg, #f8fbff 0%, var(--bg) 100%);
+    background: linear-gradient(180deg, var(--bg) 0%, var(--bg) 100%);
     display:flex;
     align-items:center;
     justify-content:center;
     padding:36px;
-    color:#0f172a;
+    color:var(--text);
+    position: relative;
+  }
+
+  /* THEME TOGGLE ICON */
+  .theme-toggle {
+      position: absolute;
+      top: 20px;
+      right: 22px;
+      font-size: 26px;
+      cursor: pointer;
+      user-select: none;
+      transition: transform 0.2s ease;
+      color: var(--text);
+  }
+  .theme-toggle:hover {
+      transform: scale(1.10);
   }
 
   .card{
@@ -47,7 +80,7 @@
     min-width:320px;
   }
 
-  /* NEW Rounded Logo Image Style */
+  /* LOGO IMAGE */
   .logo-img {
       width: 68px;
       height: 68px;
@@ -61,6 +94,9 @@
       align-items: center;
       justify-content: center;
       background: #fff;
+  }
+  [data-theme="dark"] .logo-img {
+      background: #222;
   }
 
   .logo-img img {
@@ -109,6 +145,12 @@
     box-shadow:inset 0 1px 0 rgba(16,24,40,0.02);
   }
 
+  [data-theme="dark"] .url-input {
+      background: #1c1f25;
+      border-color:#333;
+      color:var(--text);
+  }
+
   .url-input:focus {
       box-shadow:0 6px 20px rgba(37,99,235,0.08);
       border-color: rgba(37,99,235,0.25);
@@ -120,6 +162,12 @@
     border:1px solid #e6eef9;
     background: #fff;
     font-size:14px;
+  }
+
+  [data-theme="dark"] select#storageMethod {
+      background:#1c1f25;
+      border-color:#333;
+      color: var(--text);
   }
 
   button#generateBtn {
@@ -143,7 +191,7 @@
   }
 
   .panel{
-    background: linear-gradient(180deg, rgba(255,255,255,0.8), rgba(255,255,255,0.96));
+    background: var(--panel-bg);
     border-radius:12px;
     padding:18px;
     border:1px solid rgba(14,21,38,0.03);
@@ -168,6 +216,11 @@
     font-weight:600;
     color:#0b1220;
   }
+  [data-theme="dark"] .short {
+      background:#1c1f25;
+      border-color:#333;
+      color:var(--text);
+  }
 
   .btn-copy {
     background:#fff;
@@ -175,6 +228,11 @@
     padding:8px 10px;
     border-radius:8px;
     cursor:pointer;
+  }
+  [data-theme="dark"] .btn-copy {
+      background:#1c1f25;
+      border-color:#333;
+      color:var(--text);
   }
 
   .examples {
@@ -193,15 +251,24 @@
     .card { flex-direction:column; align-items:stretch; padding:28px; gap:18px; }
     .right{ width:100%; order:3 }
   }
-
 </style>
 </head>
-<body>
+
+<body data-theme="light">
+
+<!-- ⭐ SVG Moon Icon (Dark Mode Toggle) -->
+<div class="theme-toggle" onclick="toggleTheme()" title="Toggle Theme">
+  <svg width="26" height="26" viewBox="0 0 24 24" fill="none"
+       stroke="currentColor" stroke-width="2" stroke-linecap="round"
+       stroke-linejoin="round">
+    <path d="M21 12.79A9 9 0 0 1 11.21 3 
+             7 7 0 0 0 12 17a7 7 0 0 0 9-4.21z"/>
+  </svg>
+</div>
 
   <main class="card" role="main" aria-labelledby="mesh-title">
     <section class="left">
 
-      <!-- Updated Logo Block -->
       <div class="brand">
         <div class="logo-img">
           <img src="logo.jpg" alt="MeshLink Logo">
@@ -240,7 +307,7 @@
         </div>
 
         <div class="examples">
-          Example: <strong>https://yourdomain.com/abc123</strong>
+          Example: <strong>https://thefallenmaster.com/abc123</strong>
           <br><br>
           Mapping and encrypted payload are stored across multiple mirrors.
         </div>
@@ -261,6 +328,11 @@ function genShortId(len = 6){
 function isValidUrl(s) {
   try { new URL(s); return true; }
   catch(e){ return false; }
+}
+
+function toggleTheme() {
+  const body = document.body;
+  body.dataset.theme = (body.dataset.theme === "light") ? "dark" : "light";
 }
 
 document.getElementById('generateBtn').onclick = async () => {
