Update logo image path and replace logo file

--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
 
       <div class="brand">
         <div class="logo-img">
-          <img src="logo.jpg" alt="MeshLink Logo">
+          <img src="images/logo.jpg" alt="MeshLink Logo">
         </div>
 
         <div>
